# reinhardt-web

./: .gitignore  .testcontainers.properties  CHANGELOG.md  CLAUDE.commit.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile.toml  README.ja.md  README.md  THIRD-PARTY-NOTICES  bacon.toml
crates/reinhardt-admin/: CHANGELOG.md  Cargo.toml  README.md
crates/reinhardt-admin/src/: core.rs  lib.rs
crates/reinhardt-conf/: CHANGELOG.md  Cargo.toml  README.md
crates/reinhardt-conf/src/: lib.rs
crates/reinhardt-contrib/: Cargo.toml  README.ja.md  README.md
crates/reinhardt-contrib/src/: lib.rs
crates/reinhardt-contrib/tests/: humanize_tests.rs
crates/reinhardt-core/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/reinhardt-core/macros/: Cargo.toml
crates/reinhardt-core/src/: endpoint.rs  exception.rs  lib.rs  messages.rs  negotiation.rs  pagination.rs  parsers.rs  reactive.rs  security.rs  serializers.rs  signals.rs  types.rs  validators.rs
crates/reinhardt-graphql/: Cargo.toml  GRPC_INTEGRATION.md  README.md
crates/reinhardt-graphql/macros/: CHANGELOG.md
crates/reinhardt-graphql/src/: di.rs  lib.rs  schema.rs  subscription.rs
crates/reinhardt-graphql/tests/: dataloader_integration.rs  di_integration.rs  resolver_execution.rs
crates/reinhardt-grpc/: Cargo.toml  README.ja.md  README.md  build.rs
crates/reinhardt-grpc/macros/: Cargo.toml
crates/reinhardt-grpc/proto/: common.proto  graphql.proto
crates/reinhardt-grpc/src/: adapter.rs  di.rs  error.rs  lib.rs
crates/reinhardt-grpc/tests/: di_integration.rs  feature_flags_tests.rs
crates/reinhardt-http/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/reinhardt-http/src/: auth_state.rs  chunked_upload.rs  extensions.rs  lib.rs  messages_middleware.rs  middleware.rs  request.rs  response.rs  upload.rs
crates/reinhardt-http/tests/: extensions_integration.rs  request_response_integration.rs  request_tests.rs
crates/reinhardt-middleware/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/reinhardt-middleware/src/: auth.rs  broken_link.rs  brotli.rs  cache.rs  circuit_breaker.rs  common.rs  conditional.rs  cors.rs  csp.rs  csp_helpers.rs  csrf.rs  di_support.rs  etag.rs  flatpages.rs  gzip.rs  https_redirect.rs  lib.rs  locale.rs  logging.rs  messages.rs  metrics.rs  rate_limit.rs  redirect_fallback.rs  request_id.rs  security_middleware.rs  session.rs  site.rs  timeout.rs  tracing.rs  xframe.rs  xss.rs
crates/reinhardt-middleware/tests/: boundary_value_integration.rs  cache_middleware_integration.rs  combination_integration.rs  csrf_session_integration.rs  decision_table_integration.rs  edge_cases_integration.rs  equivalence_partitioning_integration.rs  error_path_integration.rs  fixtures.rs  fuzz_integration.proptest-regressions  fuzz_integration.rs  happy_path_integration.rs  middleware_chain_integration.rs  property_based_integration.rs  sanity_integration.rs  session_auth_integration.rs  state_transition_integration.rs  use_cases_integration.rs
crates/reinhardt-page/: Cargo.toml
crates/reinhardt-page/src/: builder.rs  dom.rs  form.rs  lib.rs  reactive.rs  server_fn.rs
crates/reinhardt-page/tests/: dom_integration_tests.rs  reactive_system_tests.rs  server_fn_codec_integration_tests.rs  server_fn_macro_tests.rs
crates/reinhardt-pages/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/reinhardt-pages/benches/: wasm_framework_benchmarks.rs
crates/reinhardt-pages/docs/: i18n_requirements.md
crates/reinhardt-pages/macros/: CHANGELOG.md
crates/reinhardt-pages/src/: auth.rs  component.rs  csrf.rs  form.rs  form_generated.rs  hydration.rs  integ.rs  lib.rs  logging.rs  platform.rs  prelude.rs  reactive.rs  router.rs  server_fn.rs  spawn.rs  static_resolver.rs  testing.rs
crates/reinhardt-pages/tests/: api_pagination_tests.rs  compile_tests.rs  component_system_integration.rs  form_binding_tests.rs  form_integration_tests.rs  head_integration_tests.rs  reactive_system_tests.rs  resource_integration.rs  router_integration_tests.rs  ssr_head_integration_tests.rs  ssr_hydration_integration_tests.rs  ssr_renderer_integration_tests.rs  static_asset_combination_tests.rs  static_asset_decision_table_tests.rs  static_asset_happy_path_tests.rs  static_asset_property_tests.rs  static_asset_sanity_tests.rs  static_asset_use_case_tests.rs  static_files_integration_tests.rs  static_macro_compile_tests.rs  static_resolver_state_transition_tests.rs  static_resolver_tests.rs  ui.rs  watch_property_tests.rs  watch_ssr_tests.rs  watch_syntax_tests.rs
crates/reinhardt-rest/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/reinhardt-rest/openapi-macros/: Cargo.toml
crates/reinhardt-rest/src/: authentication.rs  lib.rs  routers.rs  versioning.rs
crates/reinhardt-shortcuts/: Cargo.toml  README.ja.md  README.md  askama.toml
crates/reinhardt-shortcuts/src/: askama_templates.rs  context.rs  error_pages.rs  get_or_404.rs  (+9 more)
crates/reinhardt-tasks/: Cargo.toml  README.ja.md  README.md
crates/reinhardt-utils/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
examples/: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml
examples/common/: Cargo.toml
examples/database-integration/: Cargo.toml  README.md  build.rs
examples/examples-database-integration/: Cargo.toml  build.rs
examples/examples-hello-world/: Cargo.toml  build.rs
examples/examples-rest-api/: Cargo.toml  build.rs
examples/hello-world/: Cargo.toml  build.rs
examples/local/: Cargo.toml
examples/remote/: Cargo.toml  README.md
examples/rest-api/: Cargo.toml  README.md  build.rs
examples/test-macros/: Cargo.toml
tests/: Cargo.toml  build.rs
tests/bench/: Cargo.toml  README.md  dateformat_benchmarks.rs  encoding_benchmarks.rs  html_benchmarks.rs  template_compile_time_vs_runtime.rs  text_benchmarks.rs
tests/grpc_services/: user_events_service.rs  user_service.rs
tests/integration/: Cargo.toml  README.md  admin_integration_tests.rs  orm_async_query_integration.rs
tests/proto/: common.proto  user.proto  user_events.proto
tests/src/: lib.rs
(+2827 files in other folders)
