[workspace]
resolver = "2"
members = [
    "test-macros",
    "common",
    "hello-world",
    "rest-api",
    "database-integration",
]

# ⚠️ workspace.dependencies に reinhardt を含めない
# 各 example が独立して crates.io から取得するため

[workspace.dependencies]
# Examples 専用の共通依存のみ
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
semver = "1"
once_cell = "1"
