[workspace]
resolver = "2"
members = [
    "test-macros",
    "common",
    "hello-world",
    "rest-api",
    "database-integration",
]

# ⚠️ Do not include reinhardt in workspace.dependencies
# Each example should independently fetch from crates.io

[workspace.dependencies]
# Common dependencies for examples only
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
semver = "1"
once_cell = "1"
