[package]
name = "reinhardt-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Admin panel functionality for Reinhardt framework"
publish = true

[dependencies]
# Internal crates (optional)
reinhardt-panel = { path = "crates/panel", version = "0.1.0-alpha.1", optional = true }

[features]
default = ["panel"]

# Module features
panel = ["dep:reinhardt-panel"]

# All features
all = ["panel"]

[dev-dependencies]
