[package]
name = "reinhardt-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Admin panel functionality for Reinhardt framework"
publish = true

[dependencies]
reinhardt-apps = { workspace = true }

[features]
default = []

# All features
all = []

[dev-dependencies]
