[package]
name = "reinhardt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core components for Reinhardt framework"

[dependencies]
# Re-export all internal crates
reinhardt-types = { path = "crates/types", optional = true }
reinhardt-exception = { path = "crates/exception", optional = true }
reinhardt-signals = { path = "crates/signals", optional = true }
reinhardt-macros = { path = "crates/macros", optional = true }
reinhardt-security = { path = "crates/security", optional = true }
reinhardt-validators = { path = "crates/validators", optional = true }

[features]
default = ["types", "exception", "signals", "macros", "security", "validators"]
types = ["dep:reinhardt-types"]
exception = ["dep:reinhardt-exception"]
signals = ["dep:reinhardt-signals"]
macros = ["dep:reinhardt-macros"]
security = ["dep:reinhardt-security"]
validators = ["dep:reinhardt-validators"]
