[package]
name = "reinhardt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core components for Reinhardt framework"

[dependencies]
# Re-export all internal crates
reinhardt-types = { workspace = true, optional = true }
reinhardt-exception = { workspace = true, optional = true }
reinhardt-signals = { workspace = true, optional = true }
reinhardt-macros = { workspace = true, optional = true }
reinhardt-security = { workspace = true, optional = true }
reinhardt-validators = { workspace = true, optional = true }
reinhardt-core-serializers = { workspace = true, optional = true }

# New facade subcrates
reinhardt-messages = { workspace = true, optional = true }
reinhardt-http = { workspace = true, optional = true }
reinhardt-di = { workspace = true, optional = true }
reinhardt-negotiation = { workspace = true, optional = true }
reinhardt-parsers = { workspace = true, optional = true }
reinhardt-pagination = { workspace = true, optional = true }

# External dependencies for re-export
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
hyper = { workspace = true, optional = true }
inventory = "0.3"

[features]
default = [
  "types",
  "exception",
  "signals",
  "macros",
  "security",
  "validators",
  "serializers",
]
types = ["dep:reinhardt-types"]
# Page types from reinhardt-types (Page, PageElement, IntoPage, etc.)
page = ["types", "reinhardt-types/page"]
exception = ["dep:reinhardt-exception"]
signals = ["dep:reinhardt-signals"]
macros = ["dep:reinhardt-macros"]
security = ["dep:reinhardt-security"]
validators = ["dep:reinhardt-validators"]
serializers = ["dep:reinhardt-core-serializers"]
http = ["dep:reinhardt-http", "dep:hyper"]

# New facade features
messages = ["dep:reinhardt-messages"]
di = ["dep:reinhardt-di", "reinhardt-di/params"]
negotiation = ["dep:reinhardt-negotiation"]
parsers = ["dep:reinhardt-parsers"]
pagination = ["dep:reinhardt-pagination"]

# Aggregate all core features
core-full = [
  "types",
  "exception",
  "signals",
  "macros",
  "security",
  "validators",
  "serializers",
  "http",
  "messages",
  "di",
  "negotiation",
  "parsers",
  "pagination",
  "reinhardt-types/full",
  "reinhardt-exception/full",
  "reinhardt-signals/full",
  "reinhardt-macros/full",
  "reinhardt-security/full",
  "reinhardt-validators/full",
  "reinhardt-core-serializers/full",
  "reinhardt-messages/full",
  "reinhardt-negotiation/full",
  "reinhardt-parsers/full",
  "reinhardt-pagination/full",
]
