[package]
name = "reinhardt-graphql"
version.workspace = true
description = "GraphQL API support for Reinhardt (facade crate)"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# GraphQL facade over gRPC for Query/Mutation
graphql-grpc = [
  "reinhardt-graphql-core/graphql-grpc",
]
# gRPC-based Subscriptions (Rust 2024 compatible)
subscription = [
  "reinhardt-graphql-core/subscription",
]
# All features enabled
full = ["graphql-grpc", "subscription"]

[dependencies]
# Core GraphQL functionality
reinhardt-graphql-core = { path = "crates/core", version = "0.1.0-alpha.1" }

# Re-export macros when features are enabled
reinhardt-graphql-macros = { path = "crates/macros", version = "0.1.0-alpha.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
