[package]
name = "reinhardt-grpc"
version.workspace = true
description = "gRPC support for building RPC services"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
protox = "0.7"

[dev-dependencies]
tokio-test = { workspace = true }
