[package]
name = "reinhardt-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3.31"
thiserror = { workspace = true }
reinhardt-parsers = { workspace = true }
reinhardt-exception = { workspace = true }
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync"] }
