[package]
name = "reinhardt-middleware"
version.workspace = true
description = "Middleware system for request/response processing pipeline"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

# Fine-grained middleware features
cors = []
compression = []
security = []
rate-limit = []
session = []

# Database support for certain middleware
sqlx = ["dep:sqlx"]

[dependencies]
reinhardt-types = { workspace = true }
reinhardt-http = { version = "0.1.0-alpha.1", path = "../reinhardt-http" }
reinhardt-exception = { workspace = true }
reinhardt-contrib = { version = "0.1.0-alpha.1", path = "../reinhardt-contrib" }
reinhardt-apps = { workspace = true }
reinhardt-security = { workspace = true }
reinhardt-auth = { workspace = true, features = ["session"] }
reinhardt-mail = { workspace = true }
reinhardt-settings = { workspace = true }
reinhardt-di = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
brotli = "8.0.2"
sha2 = { workspace = true }
hex = "0.4"
httpdate = "1.0"
bytes = { workspace = true }
sqlx = { workspace = true, optional = true }
regex = "1.10"
log = "0.4"
url = "2.5"
uuid = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
