[package]
name = "reinhardt-page"
version = "0.1.0"
edition = "2024"
authors = ["Reinhardt Contributors"]
license = "MIT OR Apache-2.0"
description = "WASM-based frontend framework for Reinhardt with Django-like API"
repository.workspace = true
keywords = ["wasm", "web", "frontend", "reactive", "django"]
categories = ["wasm", "web-programming"]

[features]
# Week 4 Day 3: Codec features
msgpack = ["dep:rmp-serde"]  # Enable MessagePack codec for binary serialization

[dependencies]
# Procedural macros
reinhardt-page-macros = { path = "crates/macros" }

# Phase 3: Form Integration (Week 5-6)
reinhardt-forms = { path = "../reinhardt-forms" }

# Core WASM bindings (low-level APIs only)
wasm-bindgen = "0.2"
js-sys = "0.3"

# Serialization (Phase 5.5)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"  # Week 4 Day 3: URL encoding codec
rmp-serde = { version = "1.3", optional = true }  # Week 4 Day 3: MessagePack codec (optional)

# Web APIs
web-sys = { version = "0.3", features = [
	"Window",
	"Document",
	"Element",
	"HtmlElement",
	"Node",
	"Text",
	"Event",
	"EventTarget",
	"console",
	# Event types (Phase 2)
	"MouseEvent",
	"InputEvent",
	"KeyboardEvent",
	"FocusEvent",
	# HTML element types (Phase 2)
	"HtmlInputElement",
	"HtmlButtonElement",
	"HtmlDivElement",
	"HtmlSpanElement",
	"HtmlFormElement",
	"HtmlTextAreaElement",
	"HtmlSelectElement",
	# DOM manipulation
	"DomTokenList",
	"NamedNodeMap",
	"Attr",
] }

# Async support for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
gloo-net = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serial_test = "3"
trybuild = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
