[package]
name = "reinhardt-pages"
version = "0.1.0"
edition = "2024"
authors = ["Reinhardt Contributors"]
license = "MIT OR Apache-2.0"
description = "WASM-based frontend framework for Reinhardt with Django-like API"
repository.workspace = true
keywords = ["wasm", "web", "frontend", "reactive", "django"]
categories = ["wasm", "web-programming"]

[features]
default = []
msgpack = ["dep:rmp-serde"]
static = ["dep:reinhardt-static"]
pages-full = ["msgpack", "static"]

[dependencies]
# Procedural macros
reinhardt-pages-macros = { path = "crates/macros" }

# Static files integration (optional)
reinhardt-static = { path = "../reinhardt-utils/crates/static", optional = true }

# Core WASM bindings (low-level APIs only)
wasm-bindgen = "0.2"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
rmp-serde = { version = "1.3", optional = true }
urlencoding = "2.1"

# Router pattern matching
regex = "1.11"

# Web APIs
web-sys = { version = "0.3", features = [
	"Window",
	"Document",
	"Element",
	"HtmlElement",
	"Node",
	"Text",
	"Event",
	"EventTarget",
	"console",
	# Event types
	"MouseEvent",
	"InputEvent",
	"KeyboardEvent",
	"FocusEvent",
	# HTML element types
	"HtmlInputElement",
	"HtmlButtonElement",
	"HtmlDivElement",
	"HtmlSpanElement",
	"HtmlFormElement",
	"HtmlTextAreaElement",
	"HtmlSelectElement",
	# DOM manipulation
	"DomTokenList",
	"NamedNodeMap",
	"Attr",
	"HtmlCollection",
	"NodeList",
	"HtmlDocument",
	# History API (for router)
	"History",
	"Location",
] }

# Async support for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
gloo-net = "0.6"

# Server-side only dependencies (DI, HTTP, Forms)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reinhardt-forms = { path = "../reinhardt-forms" }
reinhardt-di = { path = "../reinhardt-di" }
reinhardt-http = { path = "../reinhardt-http" }
async-trait = "0.1"

[dev-dependencies]
reinhardt-static = { path = "../reinhardt-utils/crates/static" }
wasm-bindgen-test = "0.3"
serial_test = "3"
trybuild = "1.0"
criterion = "0.5"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "wasm_framework_benchmarks"
harness = false
