[package]
name = "reinhardt-rest"
version.workspace = true
description = "REST API framework aggregator for Reinhardt"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["serializers", "parsers", "renderers"]
serializers = ["reinhardt-orm"]
parsers = []
renderers = []

[dependencies]
# Core dependencies
reinhardt-apps = { workspace = true }
reinhardt-auth = { workspace = true }
reinhardt-routers = { workspace = true }
reinhardt-viewsets = { workspace = true }
# openapi = { path = "crates/openapi", optional = true } # Temporarily disabled due to utoipa API changes
reinhardt-browsable-api = { workspace = true }
reinhardt-orm = { workspace = true, optional = true }
reinhardt-exception = { workspace = true }

# Internal crates (now part of reinhardt-rest)
rest-core = { version = "0.1.0", path = "crates/rest-core", package = "reinhardt-rest-core" }
reinhardt-serializers = { version = "0.1.0", path = "crates/serializers" }
reinhardt-parsers = { version = "0.1.0", path = "crates/parsers" }
reinhardt-pagination = { version = "0.1.0", path = "crates/pagination" }
reinhardt-filters = { version = "0.1.0", path = "crates/filters" }
reinhardt-throttling = { version = "0.1.0", path = "crates/throttling" }
reinhardt-versioning = { version = "0.1.0", path = "crates/versioning" }
reinhardt-metadata = { version = "0.1.0", path = "crates/metadata" }
reinhardt-negotiation = { version = "0.1.0", path = "crates/negotiation" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
serde_urlencoded = "0.7"

# HTTP
hyper = { workspace = true }
bytes = { workspace = true }
mime = "0.3"

# Async
async-trait = { workspace = true }
futures-util = "0.3"

# Utilities
thiserror = "1.0"
urlencoding = "2.1"
chrono = { workspace = true }

# SQL (for serializers)
sqlx = { workspace = true }

# Multipart parsing (for parsers)
multer = "3.0"

# Rendering (for renderers)
quick-xml = { version = "0.31", features = ["serialize"] }
csv = "1.3"
utoipa = { version = "5.4", features = ["yaml"] }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = "0.4"
uuid = { version = "1.0", features = ["v4"] }
