[package]
name = "reinhardt-shortcuts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Django-style shortcut functions for redirects, rendering, and 404 error handling"

[dependencies]
reinhardt-http = { workspace = true }
reinhardt-views = { workspace = true }
reinhardt-template = { workspace = true, optional = true }
reinhardt-db = { workspace = true, optional = true }
reinhardt-routers = { path = "../reinhardt-urls/crates/routers", version = "0.1.0-alpha.1" }

bytes = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tera = { version = "1.20", optional = true }
chrono = { version = "0.4", optional = true }
hyper = { workspace = true }
lru = { version = "0.16.2", optional = true }

[features]
default = ["templates"]
templates = ["reinhardt-template", "lru", "tera", "chrono"]
database = ["reinhardt-db", "reinhardt-db/backends", "reinhardt-db/pool", "reinhardt-db/orm", "reinhardt-db/postgres"]

[dev-dependencies]
tokio = { workspace = true }
rstest = { workspace = true }
reinhardt-test = { path = "../reinhardt-test", features = ["testcontainers"] }
sqlx = { workspace = true }
serial_test = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
async-trait = { workspace = true }
