[package]
name = "reinhardt-tasks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
reinhardt-apps = { workspace = true }

async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = "0.4"
uuid = { workspace = true }
cron = "0.13"
rand = "0.8"

# Redis backend (optional)
redis = { version = "0.24", features = [
  "tokio-comp",
  "connection-manager",
], optional = true }

# Database backend (optional)
sqlx = { version = "0.8", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "sqlite",
  "mysql",
], optional = true }

[dev-dependencies]
tokio = { workspace = true }
testcontainers = { workspace = true }
serial_test = { workspace = true }

[features]
default = []
redis-backend = ["redis"]
database-backend = ["sqlx"]
all-backends = ["redis-backend", "database-backend"]
